# markata-starter-blog-example

./: .copier-answers.yml  .gitignore  building-the-site.md  index.html  index.md  ipython.md  jinja.md  manifest.json  markata.json  markata.toml  pyproject.toml  rss.xml  service-worker.js  your-own-style.md
.github/workflows/: build-site.yml
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
all/: index.html
archive/: index.html
building-the-site/: index.html
draft/: index.html
ipython/: index.html
jinja/: index.html
published/: index.html
your-own-style/: index.html
