[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markata_starter_blog_example"

description = "A blog created from the markata blog-starter"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "test", email = "test@test.com" },
]


dependencies = ['markata~=0.5.0.dev0']
dynamic = ["version"]

[tool.hatch.version]
path = "markata_starter_blog_example/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
